# vita-sdk

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  renovate.json
.devcontainer/: .dockerignore  Dockerfile  Dockerfile.base  devcontainer.json
.github/workflows/: pipeline.yml
docs/: engineering_standards.md
include/vita/: config.hpp  health.hpp  log.hpp  metric.hpp  telemetry.hpp  trace.hpp
scripts/: publish_base.sh
src/: config.cpp  health.cpp  log.cpp  metric.cpp  telemetry.cpp  trace.cpp
tests/unit/: log_test.cpp  metric_test.cpp  test_config.cpp  test_health.cpp  test_telemetry.cpp  trace_test.cpp
